[package]
name = "warp-multipart"
version = "0.1.0"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp-multipart-derive = {path = "warp-multipart-derive"}

warp = "0.2"
bytes = "0.5"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
tokio = {version="0.2", features=["macros"]}