[package]
name = "warp-multipart"
version = "0.1.0"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde", "serde_json"]

[dependencies]
warp-multipart-derive = {path = "warp-multipart-derive"}

warp = "0.2"
bytes = "0.5"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"

serde = {version="1.0", optional=true}
serde_json = {version="1.0", optional=true}

[dev-dependencies]
tokio = {version="0.2", features=["macros"]}
serde = {version="1.0", features=["derive"]}